Project::Compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    NL
    REPEAT
    RETURN
    SET
    TYPE

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID PONTO_VIRGULA var_declaration_part BEGIN body END PONTO
Rule 2     var_declaration_part -> VAR var_declaration_list
Rule 3     var_declaration_part -> empty
Rule 4     var_declaration_list -> var_declaration
Rule 5     var_declaration_list -> var_declaration_list var_declaration
Rule 6     var_declaration_list -> var_declaration_list PONTO_VIRGULA var_declaration
Rule 7     var_declaration -> id_list DOISPONTOS type PONTO_VIRGULA
Rule 8     id_list -> ID
Rule 9     id_list -> id_list VIRGULA ID
Rule 10    body -> statements
Rule 11    statements -> statements statement
Rule 12    statements -> statement
Rule 13    statement -> assign
Rule 14    statement -> writeln
Rule 15    statement -> write
Rule 16    statement -> readln
Rule 17    statement -> read
Rule 18    statement -> if
Rule 19    statement -> case
Rule 20    statement -> while
Rule 21    statement -> for
Rule 22    statement -> function
Rule 23    statement -> procedure
Rule 24    statement -> func_call
Rule 25    writeln -> WRITELN ( Args ) PONTO_VIRGULA
Rule 26    write -> WRITE ( Args ) PONTO_VIRGULA
Rule 27    readln -> READLN ( Args ) PONTO_VIRGULA
Rule 28    read -> READ ( Args ) PONTO_VIRGULA
Rule 29    Args -> Args VIRGULA Arg
Rule 30    Args -> Arg
Rule 31    Arg -> const
Rule 32    Arg -> var
Rule 33    assign -> var ASSIGN expression PONTO_VIRGULA
Rule 34    if -> IF expression THEN statement
Rule 35    if -> IF expression THEN statement ELSE statement
Rule 36    if -> IF expression THEN compound_statement
Rule 37    if -> IF expression THEN compound_statement ELSE compound_statement
Rule 38    case -> CASE expression OF case_branches END PONTO_VIRGULA
Rule 39    case -> CASE expression OF case_branches ELSE statements END PONTO_VIRGULA
Rule 40    case_branches -> case_branches case_branch
Rule 41    case_branches -> case_branch
Rule 42    case_branch -> case_labels DOISPONTOS statement
Rule 43    case_labels -> case_labels VIRGULA const
Rule 44    case_labels -> const
Rule 45    expression -> expression OR and_expr
Rule 46    expression -> and_expr
Rule 47    and_expr -> and_expr AND not_expr
Rule 48    and_expr -> not_expr
Rule 49    not_expr -> NOT not_expr
Rule 50    not_expr -> rel_expr
Rule 51    rel_expr -> arith_expr rel_op arith_expr
Rule 52    rel_expr -> arith_expr
Rule 53    rel_op -> IGUAL
Rule 54    rel_op -> DIFF
Rule 55    rel_op -> MAIOR
Rule 56    rel_op -> MENOR
Rule 57    rel_op -> MENOR_IGUAL
Rule 58    rel_op -> MAIOR_IGUAL
Rule 59    arith_expr -> arith_expr add_op term
Rule 60    arith_expr -> term
Rule 61    add_op -> MAIS
Rule 62    add_op -> MENOS
Rule 63    add_op -> OR
Rule 64    term -> term mul_op factor
Rule 65    term -> factor
Rule 66    mul_op -> MULT
Rule 67    mul_op -> DIVIDE
Rule 68    mul_op -> AND
Rule 69    mul_op -> DIV
Rule 70    mul_op -> MOD
Rule 71    factor -> const
Rule 72    factor -> var
Rule 73    factor -> ( expression )
Rule 74    factor -> func_call
Rule 75    while -> WHILE expression DO compound_statement PONTO_VIRGULA
Rule 76    while -> WHILE ( expression ) DO compound_statement PONTO_VIRGULA
Rule 77    for -> FOR ID ASSIGN expression TO expression DO compound_statement PONTO_VIRGULA
Rule 78    for -> FOR ID ASSIGN expression DOWNTO expression DO compound_statement PONTO_VIRGULA
Rule 79    compound_statement -> BEGIN statements END
Rule 80    procedure -> PROCEDURE ID ( params ) PONTO_VIRGULA var_declaration_part BEGIN body END PONTO_VIRGULA
Rule 81    function -> FUNCTION ID ( params ) DOISPONTOS type PONTO_VIRGULA var_declaration_part BEGIN body END PONTO_VIRGULA
Rule 82    params -> param_list
Rule 83    params -> empty
Rule 84    param_list -> param
Rule 85    param_list -> param_list PONTO_VIRGULA param
Rule 86    param -> id_list DOISPONTOS type
Rule 87    const -> STRING
Rule 88    const -> NUM
Rule 89    var -> ID
Rule 90    var -> ID [ expression ]
Rule 91    type -> INTEGER
Rule 92    type -> REAL
Rule 93    type -> STRING_TYPE
Rule 94    type -> BOOLEAN
Rule 95    type -> array_type
Rule 96    array_type -> ARRAY [ NUM DOUBLEPOINTS NUM ] OF type
Rule 97    array_type -> ARRAY [ NUM ] OF type
Rule 98    func_call -> ID ( Args )
Rule 99    func_call -> BUILTIN_FUNC ( Args )
Rule 100   empty -> <empty>

Terminals, with rules where they appear

(                    : 25 26 27 28 73 76 80 81 98 99
)                    : 25 26 27 28 73 76 80 81 98 99
AND                  : 47 68
ARRAY                : 96 97
ASSIGN               : 33 77 78
BEGIN                : 1 79 80 81
BOOLEAN              : 94
BUILTIN_FUNC         : 99
CASE                 : 38 39
COMMENT              : 
DIFF                 : 54
DIV                  : 69
DIVIDE               : 67
DO                   : 75 76 77 78
DOISPONTOS           : 7 42 81 86
DOUBLEPOINTS         : 96
DOWNTO               : 78
ELSE                 : 35 37 39
END                  : 1 38 39 79 80 81
FOR                  : 77 78
FUNCTION             : 81
ID                   : 1 8 9 77 78 80 81 89 90 98
IF                   : 34 35 36 37
IGUAL                : 53
INTEGER              : 91
MAIOR                : 55
MAIOR_IGUAL          : 58
MAIS                 : 61
MENOR                : 56
MENOR_IGUAL          : 57
MENOS                : 62
MOD                  : 70
MULT                 : 66
NL                   : 
NOT                  : 49
NUM                  : 88 96 96 97
OF                   : 38 39 96 97
OR                   : 45 63
PONTO                : 1
PONTO_VIRGULA        : 1 6 7 25 26 27 28 33 38 39 75 76 77 78 80 80 81 81 85
PROCEDURE            : 80
PROGRAM              : 1
READ                 : 28
READLN               : 27
REAL                 : 92
REPEAT               : 
RETURN               : 
SET                  : 
STRING               : 87
STRING_TYPE          : 93
THEN                 : 34 35 36 37
TO                   : 77
TYPE                 : 
VAR                  : 2
VIRGULA              : 9 29 43
WHILE                : 75 76
WRITE                : 26
WRITELN              : 25
[                    : 90 96 97
]                    : 90 96 97
error                : 

Nonterminals, with rules where they appear

Arg                  : 29 30
Args                 : 25 26 27 28 29 98 99
add_op               : 59
and_expr             : 45 46 47
arith_expr           : 51 51 52 59
array_type           : 95
assign               : 13
body                 : 1 80 81
case                 : 19
case_branch          : 40 41
case_branches        : 38 39 40
case_labels          : 42 43
compound_statement   : 36 37 37 75 76 77 78
const                : 31 43 44 71
empty                : 3 83
expression           : 33 34 35 36 37 38 39 45 73 75 76 77 77 78 78 90
factor               : 64 65
for                  : 21
func_call            : 24 74
function             : 22
id_list              : 7 9 86
if                   : 18
mul_op               : 64
not_expr             : 47 48 49
param                : 84 85
param_list           : 82 85
params               : 80 81
procedure            : 23
program              : 0
read                 : 17
readln               : 16
rel_expr             : 50
rel_op               : 51
statement            : 11 12 34 35 35 42
statements           : 10 11 39 79
term                 : 59 60 64
type                 : 7 81 86 96 97
var                  : 32 33 72
var_declaration      : 4 5 6
var_declaration_list : 2 5 6
var_declaration_part : 1 80 81
while                : 20
write                : 15
writeln              : 14

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID PONTO_VIRGULA var_declaration_part BEGIN body END PONTO

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID PONTO_VIRGULA var_declaration_part BEGIN body END PONTO

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . PONTO_VIRGULA var_declaration_part BEGIN body END PONTO

    PONTO_VIRGULA   shift and go to state 4


state 4

    (1) program -> PROGRAM ID PONTO_VIRGULA . var_declaration_part BEGIN body END PONTO
    (2) var_declaration_part -> . VAR var_declaration_list
    (3) var_declaration_part -> . empty
    (100) empty -> .

    VAR             shift and go to state 6
    BEGIN           reduce using rule 100 (empty -> .)

    var_declaration_part           shift and go to state 5
    empty                          shift and go to state 7

state 5

    (1) program -> PROGRAM ID PONTO_VIRGULA var_declaration_part . BEGIN body END PONTO

    BEGIN           shift and go to state 8


state 6

    (2) var_declaration_part -> VAR . var_declaration_list
    (4) var_declaration_list -> . var_declaration
    (5) var_declaration_list -> . var_declaration_list var_declaration
    (6) var_declaration_list -> . var_declaration_list PONTO_VIRGULA var_declaration
    (7) var_declaration -> . id_list DOISPONTOS type PONTO_VIRGULA
    (8) id_list -> . ID
    (9) id_list -> . id_list VIRGULA ID

    ID              shift and go to state 12

    var_declaration_list           shift and go to state 9
    var_declaration                shift and go to state 10
    id_list                        shift and go to state 11

state 7

    (3) var_declaration_part -> empty .

    BEGIN           reduce using rule 3 (var_declaration_part -> empty .)


state 8

    (1) program -> PROGRAM ID PONTO_VIRGULA var_declaration_part BEGIN . body END PONTO
    (10) body -> . statements
    (11) statements -> . statements statement
    (12) statements -> . statement
    (13) statement -> . assign
    (14) statement -> . writeln
    (15) statement -> . write
    (16) statement -> . readln
    (17) statement -> . read
    (18) statement -> . if
    (19) statement -> . case
    (20) statement -> . while
    (21) statement -> . for
    (22) statement -> . function
    (23) statement -> . procedure
    (24) statement -> . func_call
    (33) assign -> . var ASSIGN expression PONTO_VIRGULA
    (25) writeln -> . WRITELN ( Args ) PONTO_VIRGULA
    (26) write -> . WRITE ( Args ) PONTO_VIRGULA
    (27) readln -> . READLN ( Args ) PONTO_VIRGULA
    (28) read -> . READ ( Args ) PONTO_VIRGULA
    (34) if -> . IF expression THEN statement
    (35) if -> . IF expression THEN statement ELSE statement
    (36) if -> . IF expression THEN compound_statement
    (37) if -> . IF expression THEN compound_statement ELSE compound_statement
    (38) case -> . CASE expression OF case_branches END PONTO_VIRGULA
    (39) case -> . CASE expression OF case_branches ELSE statements END PONTO_VIRGULA
    (75) while -> . WHILE expression DO compound_statement PONTO_VIRGULA
    (76) while -> . WHILE ( expression ) DO compound_statement PONTO_VIRGULA
    (77) for -> . FOR ID ASSIGN expression TO expression DO compound_statement PONTO_VIRGULA
    (78) for -> . FOR ID ASSIGN expression DOWNTO expression DO compound_statement PONTO_VIRGULA
    (81) function -> . FUNCTION ID ( params ) DOISPONTOS type PONTO_VIRGULA var_declaration_part BEGIN body END PONTO_VIRGULA
    (80) procedure -> . PROCEDURE ID ( params ) PONTO_VIRGULA var_declaration_part BEGIN body END PONTO_VIRGULA
    (98) func_call -> . ID ( Args )
    (99) func_call -> . BUILTIN_FUNC ( Args )
    (89) var -> . ID
    (90) var -> . ID [ expression ]

    WRITELN         shift and go to state 30
    WRITE           shift and go to state 31
    READLN          shift and go to state 32
    READ            shift and go to state 33
    IF              shift and go to state 34
    CASE            shift and go to state 35
    WHILE           shift and go to state 36
    FOR             shift and go to state 37
    FUNCTION        shift and go to state 38
    PROCEDURE       shift and go to state 39
    ID              shift and go to state 13
    BUILTIN_FUNC    shift and go to state 40

    body                           shift and go to state 14
    statements                     shift and go to state 15
    statement                      shift and go to state 16
    assign                         shift and go to state 17
    writeln                        shift and go to state 18
    write                          shift and go to state 19
    readln                         shift and go to state 20
    read                           shift and go to state 21
    if                             shift and go to state 22
    case                           shift and go to state 23
    while                          shift and go to state 24
    for                            shift and go to state 25
    function                       shift and go to state 26
    procedure                      shift and go to state 27
    func_call                      shift and go to state 28
    var                            shift and go to state 29

state 9

    (2) var_declaration_part -> VAR var_declaration_list .
    (5) var_declaration_list -> var_declaration_list . var_declaration
    (6) var_declaration_list -> var_declaration_list . PONTO_VIRGULA var_declaration
    (7) var_declaration -> . id_list DOISPONTOS type PONTO_VIRGULA
    (8) id_list -> . ID
    (9) id_list -> . id_list VIRGULA ID

    BEGIN           reduce using rule 2 (var_declaration_part -> VAR var_declaration_list .)
    PONTO_VIRGULA   shift and go to state 42
    ID              shift and go to state 12

    var_declaration                shift and go to state 41
    id_list                        shift and go to state 11

state 10

    (4) var_declaration_list -> var_declaration .

    PONTO_VIRGULA   reduce using rule 4 (var_declaration_list -> var_declaration .)
    ID              reduce using rule 4 (var_declaration_list -> var_declaration .)
    BEGIN           reduce using rule 4 (var_declaration_list -> var_declaration .)


state 11

    (7) var_declaration -> id_list . DOISPONTOS type PONTO_VIRGULA
    (9) id_list -> id_list . VIRGULA ID

    DOISPONTOS      shift and go to state 43
    VIRGULA         shift and go to state 44


state 12

    (8) id_list -> ID .

    DOISPONTOS      reduce using rule 8 (id_list -> ID .)
    VIRGULA         reduce using rule 8 (id_list -> ID .)


state 13

    (98) func_call -> ID . ( Args )
    (89) var -> ID .
    (90) var -> ID . [ expression ]

    (               shift and go to state 45
    ASSIGN          reduce using rule 89 (var -> ID .)
    [               shift and go to state 46


state 14

    (1) program -> PROGRAM ID PONTO_VIRGULA var_declaration_part BEGIN body . END PONTO

    END             shift and go to state 47


state 15

    (10) body -> statements .
    (11) statements -> statements . statement
    (13) statement -> . assign
    (14) statement -> . writeln
    (15) statement -> . write
    (16) statement -> . readln
    (17) statement -> . read
    (18) statement -> . if
    (19) statement -> . case
    (20) statement -> . while
    (21) statement -> . for
    (22) statement -> . function
    (23) statement -> . procedure
    (24) statement -> . func_call
    (33) assign -> . var ASSIGN expression PONTO_VIRGULA
    (25) writeln -> . WRITELN ( Args ) PONTO_VIRGULA
    (26) write -> . WRITE ( Args ) PONTO_VIRGULA
    (27) readln -> . READLN ( Args ) PONTO_VIRGULA
    (28) read -> . READ ( Args ) PONTO_VIRGULA
    (34) if -> . IF expression THEN statement
    (35) if -> . IF expression THEN statement ELSE statement
    (36) if -> . IF expression THEN compound_statement
    (37) if -> . IF expression THEN compound_statement ELSE compound_statement
    (38) case -> . CASE expression OF case_branches END PONTO_VIRGULA
    (39) case -> . CASE expression OF case_branches ELSE statements END PONTO_VIRGULA
    (75) while -> . WHILE expression DO compound_statement PONTO_VIRGULA
    (76) while -> . WHILE ( expression ) DO compound_statement PONTO_VIRGULA
    (77) for -> . FOR ID ASSIGN expression TO expression DO compound_statement PONTO_VIRGULA
    (78) for -> . FOR ID ASSIGN expression DOWNTO expression DO compound_statement PONTO_VIRGULA
    (81) function -> . FUNCTION ID ( params ) DOISPONTOS type PONTO_VIRGULA var_declaration_part BEGIN body END PONTO_VIRGULA
    (80) procedure -> . PROCEDURE ID ( params ) PONTO_VIRGULA var_declaration_part BEGIN body END PONTO_VIRGULA
    (98) func_call -> . ID ( Args )
    (99) func_call -> . BUILTIN_FUNC ( Args )
    (89) var -> . ID
    (90) var -> . ID [ expression ]

    END             reduce using rule 10 (body -> statements .)
    WRITELN         shift and go to state 30
    WRITE           shift and go to state 31
    READLN          shift and go to state 32
    READ            shift and go to state 33
    IF              shift and go to state 34
    CASE            shift and go to state 35
    WHILE           shift and go to state 36
    FOR             shift and go to state 37
    FUNCTION        shift and go to state 38
    PROCEDURE       shift and go to state 39
    ID              shift and go to state 13
    BUILTIN_FUNC    shift and go to state 40

    statement                      shift and go to state 48
    assign                         shift and go to state 17
    writeln                        shift and go to state 18
    write                          shift and go to state 19
    readln                         shift and go to state 20
    read                           shift and go to state 21
    if                             shift and go to state 22
    case                           shift and go to state 23
    while                          shift and go to state 24
    for                            shift and go to state 25
    function                       shift and go to state 26
    procedure                      shift and go to state 27
    func_call                      shift and go to state 28
    var                            shift and go to state 29

state 16

    (12) statements -> statement .

    WRITELN         reduce using rule 12 (statements -> statement .)
    WRITE           reduce using rule 12 (statements -> statement .)
    READLN          reduce using rule 12 (statements -> statement .)
    READ            reduce using rule 12 (statements -> statement .)
    IF              reduce using rule 12 (statements -> statement .)
    CASE            reduce using rule 12 (statements -> statement .)
    WHILE           reduce using rule 12 (statements -> statement .)
    FOR             reduce using rule 12 (statements -> statement .)
    FUNCTION        reduce using rule 12 (statements -> statement .)
    PROCEDURE       reduce using rule 12 (statements -> statement .)
    ID              reduce using rule 12 (statements -> statement .)
    BUILTIN_FUNC    reduce using rule 12 (statements -> statement .)
    END             reduce using rule 12 (statements -> statement .)


state 17

    (13) statement -> assign .

    WRITELN         reduce using rule 13 (statement -> assign .)
    WRITE           reduce using rule 13 (statement -> assign .)
    READLN          reduce using rule 13 (statement -> assign .)
    READ            reduce using rule 13 (statement -> assign .)
    IF              reduce using rule 13 (statement -> assign .)
    CASE            reduce using rule 13 (statement -> assign .)
    WHILE           reduce using rule 13 (statement -> assign .)
    FOR             reduce using rule 13 (statement -> assign .)
    FUNCTION        reduce using rule 13 (statement -> assign .)
    PROCEDURE       reduce using rule 13 (statement -> assign .)
    ID              reduce using rule 13 (statement -> assign .)
    BUILTIN_FUNC    reduce using rule 13 (statement -> assign .)
    END             reduce using rule 13 (statement -> assign .)
    ELSE            reduce using rule 13 (statement -> assign .)
    STRING          reduce using rule 13 (statement -> assign .)
    NUM             reduce using rule 13 (statement -> assign .)


state 18

    (14) statement -> writeln .

    WRITELN         reduce using rule 14 (statement -> writeln .)
    WRITE           reduce using rule 14 (statement -> writeln .)
    READLN          reduce using rule 14 (statement -> writeln .)
    READ            reduce using rule 14 (statement -> writeln .)
    IF              reduce using rule 14 (statement -> writeln .)
    CASE            reduce using rule 14 (statement -> writeln .)
    WHILE           reduce using rule 14 (statement -> writeln .)
    FOR             reduce using rule 14 (statement -> writeln .)
    FUNCTION        reduce using rule 14 (statement -> writeln .)
    PROCEDURE       reduce using rule 14 (statement -> writeln .)
    ID              reduce using rule 14 (statement -> writeln .)
    BUILTIN_FUNC    reduce using rule 14 (statement -> writeln .)
    END             reduce using rule 14 (statement -> writeln .)
    ELSE            reduce using rule 14 (statement -> writeln .)
    STRING          reduce using rule 14 (statement -> writeln .)
    NUM             reduce using rule 14 (statement -> writeln .)


state 19

    (15) statement -> write .

    WRITELN         reduce using rule 15 (statement -> write .)
    WRITE           reduce using rule 15 (statement -> write .)
    READLN          reduce using rule 15 (statement -> write .)
    READ            reduce using rule 15 (statement -> write .)
    IF              reduce using rule 15 (statement -> write .)
    CASE            reduce using rule 15 (statement -> write .)
    WHILE           reduce using rule 15 (statement -> write .)
    FOR             reduce using rule 15 (statement -> write .)
    FUNCTION        reduce using rule 15 (statement -> write .)
    PROCEDURE       reduce using rule 15 (statement -> write .)
    ID              reduce using rule 15 (statement -> write .)
    BUILTIN_FUNC    reduce using rule 15 (statement -> write .)
    END             reduce using rule 15 (statement -> write .)
    ELSE            reduce using rule 15 (statement -> write .)
    STRING          reduce using rule 15 (statement -> write .)
    NUM             reduce using rule 15 (statement -> write .)


state 20

    (16) statement -> readln .

    WRITELN         reduce using rule 16 (statement -> readln .)
    WRITE           reduce using rule 16 (statement -> readln .)
    READLN          reduce using rule 16 (statement -> readln .)
    READ            reduce using rule 16 (statement -> readln .)
    IF              reduce using rule 16 (statement -> readln .)
    CASE            reduce using rule 16 (statement -> readln .)
    WHILE           reduce using rule 16 (statement -> readln .)
    FOR             reduce using rule 16 (statement -> readln .)
    FUNCTION        reduce using rule 16 (statement -> readln .)
    PROCEDURE       reduce using rule 16 (statement -> readln .)
    ID              reduce using rule 16 (statement -> readln .)
    BUILTIN_FUNC    reduce using rule 16 (statement -> readln .)
    END             reduce using rule 16 (statement -> readln .)
    ELSE            reduce using rule 16 (statement -> readln .)
    STRING          reduce using rule 16 (statement -> readln .)
    NUM             reduce using rule 16 (statement -> readln .)


state 21

    (17) statement -> read .

    WRITELN         reduce using rule 17 (statement -> read .)
    WRITE           reduce using rule 17 (statement -> read .)
    READLN          reduce using rule 17 (statement -> read .)
    READ            reduce using rule 17 (statement -> read .)
    IF              reduce using rule 17 (statement -> read .)
    CASE            reduce using rule 17 (statement -> read .)
    WHILE           reduce using rule 17 (statement -> read .)
    FOR             reduce using rule 17 (statement -> read .)
    FUNCTION        reduce using rule 17 (statement -> read .)
    PROCEDURE       reduce using rule 17 (statement -> read .)
    ID              reduce using rule 17 (statement -> read .)
    BUILTIN_FUNC    reduce using rule 17 (statement -> read .)
    END             reduce using rule 17 (statement -> read .)
    ELSE            reduce using rule 17 (statement -> read .)
    STRING          reduce using rule 17 (statement -> read .)
    NUM             reduce using rule 17 (statement -> read .)


state 22

    (18) statement -> if .

    WRITELN         reduce using rule 18 (statement -> if .)
    WRITE           reduce using rule 18 (statement -> if .)
    READLN          reduce using rule 18 (statement -> if .)
    READ            reduce using rule 18 (statement -> if .)
    IF              reduce using rule 18 (statement -> if .)
    CASE            reduce using rule 18 (statement -> if .)
    WHILE           reduce using rule 18 (statement -> if .)
    FOR             reduce using rule 18 (statement -> if .)
    FUNCTION        reduce using rule 18 (statement -> if .)
    PROCEDURE       reduce using rule 18 (statement -> if .)
    ID              reduce using rule 18 (statement -> if .)
    BUILTIN_FUNC    reduce using rule 18 (statement -> if .)
    END             reduce using rule 18 (statement -> if .)
    ELSE            reduce using rule 18 (statement -> if .)
    STRING          reduce using rule 18 (statement -> if .)
    NUM             reduce using rule 18 (statement -> if .)


state 23

    (19) statement -> case .

    WRITELN         reduce using rule 19 (statement -> case .)
    WRITE           reduce using rule 19 (statement -> case .)
    READLN          reduce using rule 19 (statement -> case .)
    READ            reduce using rule 19 (statement -> case .)
    IF              reduce using rule 19 (statement -> case .)
    CASE            reduce using rule 19 (statement -> case .)
    WHILE           reduce using rule 19 (statement -> case .)
    FOR             reduce using rule 19 (statement -> case .)
    FUNCTION        reduce using rule 19 (statement -> case .)
    PROCEDURE       reduce using rule 19 (statement -> case .)
    ID              reduce using rule 19 (statement -> case .)
    BUILTIN_FUNC    reduce using rule 19 (statement -> case .)
    END             reduce using rule 19 (statement -> case .)
    ELSE            reduce using rule 19 (statement -> case .)
    STRING          reduce using rule 19 (statement -> case .)
    NUM             reduce using rule 19 (statement -> case .)


state 24

    (20) statement -> while .

    WRITELN         reduce using rule 20 (statement -> while .)
    WRITE           reduce using rule 20 (statement -> while .)
    READLN          reduce using rule 20 (statement -> while .)
    READ            reduce using rule 20 (statement -> while .)
    IF              reduce using rule 20 (statement -> while .)
    CASE            reduce using rule 20 (statement -> while .)
    WHILE           reduce using rule 20 (statement -> while .)
    FOR             reduce using rule 20 (statement -> while .)
    FUNCTION        reduce using rule 20 (statement -> while .)
    PROCEDURE       reduce using rule 20 (statement -> while .)
    ID              reduce using rule 20 (statement -> while .)
    BUILTIN_FUNC    reduce using rule 20 (statement -> while .)
    END             reduce using rule 20 (statement -> while .)
    ELSE            reduce using rule 20 (statement -> while .)
    STRING          reduce using rule 20 (statement -> while .)
    NUM             reduce using rule 20 (statement -> while .)


state 25

    (21) statement -> for .
